--- a/JavaFX_UI/src/javafx_ui/FXML_tutorShow.fxml
+++ b/JavaFX_UI/src/javafx_ui/FXML_tutorShow.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -10,7 +17,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="360.0" style="-fx-background-image: url(&quot;file:////Users/domantas/Documents/GitHub/Lectio/JavaFX_UI/src/javafx_ui/images/background.png&quot;)url(&quot;file:////GitHub/Lectio/JavaFX_UI/src/javafx_ui/images/background.png&quot;);" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafx_ui.FXML_tutorShowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="360.0" style="-fx-background-image: url(&quot;file:////Users/domantas/Documents/GitHub/Lectio/JavaFX_UI/src/javafx_ui/images/background.png&quot;)url(&quot;file:////GitHub/Lectio/JavaFX_UI/src/javafx_ui/images/background.png&quot;);" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafx_ui.FXML_tutorShowController">
    <children>
       <AnchorPane layoutX="33.0" layoutY="37.0" opacity="0.95" prefHeight="649.0" prefWidth="295.0" style="-fx-background-color: #646C9A; -fx-background-radius: 10; -fx-background-radius: 10; -fx-border-color: #ffffff; -fx-border-radius: 10;">
          <children>
@@ -103,11 +110,6 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <ImageView fitHeight="29.0" fitWidth="34.0" layoutX="233.0" layoutY="409.0" opacity="0.89" preserveRatio="true" rotate="270.0">
-               <image>
-                  <Image url="@../../../../../com.visualpharm.Icons8/android/Arrows/50/fefcff/icons8-left_round.png" />
-               </image>
-            </ImageView>
          </children>
       </AnchorPane>
    </children>
